finished ids for single block machines